# dxna

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  color.hpp  curve.hpp  defincludes.hpp  dxna.hpp  enumerations.hpp  error.hpp  errorcode.hpp  game.hpp  gametime.hpp  gamewindow.cpp  gamewindow.hpp  helpers.hpp  includes.hpp  main.cpp  main.hpp  mathhelper.hpp  point.hpp  rectangle.hpp  static.hpp  structs.cpp  structs.hpp  types.hpp  utility.hpp
src/cs/: array.hpp  binary.hpp  bitconverter.hpp  buffer.hpp  cs.cpp  cs.hpp  cstypes.hpp  delegate.hpp  encoding.hpp  enumerations.hpp  eventhandler.hpp  forward.hpp  nullable.hpp  reader.hpp  stream.cpp  stream.hpp  timespan.hpp
src/graphics/: adapter.cpp  adapter.hpp  blendstate.hpp  capabilities.hpp  constbuffer.cpp  constbuffer.hpp  defprocessors.hpp  display.hpp  effect.cpp  effect.hpp  enumerations.hpp  forward.cpp  forward.hpp  graphics.hpp  graphicsdevice.hpp  graphicsresource.hpp  light.hpp  packedvector.hpp  rendertarget.hpp  shader.cpp  shader.hpp  shaders.hpp  spritebach.hpp  states.hpp  texture.cpp  texture.hpp  vertex.cpp  vertex.hpp  viewport.hpp
src/input/: buttons.hpp  gamepad.cpp  gamepad.hpp  input.hpp  keyboard.cpp  keyboard.hpp  keys.hpp  mouse.cpp  mouse.hpp
